@startuml
skinparam monochrome true

package "Acme.OOProgramming.SupplyChain" {
  class "Supplier" as Supplier <<Aggregate Root>> {
    +Id: SupplierId {readonly}
    +Name: string {readonly}
    +Address: Address {readonly}
  }

  class "SupplierId" as SupplierId <<Value Object>> {
    +Identifier: string {readonly}
  }

  Supplier "1" --> "1" SupplierId : identifies
}

package "Acme.OOProgramming.Procurement" {
  class "PurchaseOrder" as PO <<Aggregate Root>> {
    +OrderNumber: string {readonly}
    +SupplierId: SupplierId {readonly}
    +OrderDate: DateOnly {readonly}
    +Currency: Currency {readonly}
    +Items: IReadOnlyList<PurchaseOrderItem> {readonly}
    +AddItem(productId: ProductId, quantity: int, unitPriceAmount: decimal)
    +CalculateTotal(): Money
  }

  class "PurchaseOrderItem" as POItem <<Entity>> {
    +ProductId: ProductId {readonly}
    +Quantity: int {readonly}
    +UnitPrice: Money {readonly}
    +CalculateItemTotal(): Money
  }

  class "ProductId" as ProductId <<Value Object>> {
    +Id: Guid {readonly}
    +New(): ProductId
  }

  PO "1" --> "1" SupplierId
  PO "1" *--> "*" POItem : contains
  POItem "1" --> "1" ProductId
}

package "Acme.OOProgramming.Shared" {
  class "Currency" as Currency <<Value Object>> {
    +Code: string {readonly}
  }

  class "Money" as Money <<Value Object>> {
    +Amount: decimal {readonly}
    +Currency: Currency {readonly}
    +Add(money: Money): Money
    +Multiply(factor: decimal): Money
  }

  class "Address" as Address <<Value Object>> {
    +Street: string {readonly}
    +Number: string {readonly}
    +City: string {readonly}
    +StateOrRegion: string? {readonly}
    +PostalCode: string {readonly}
    +Country: string {readonly}
  }

  PO "1" --> "1" Currency
  POItem "1" --> "1" Money
  Money "1" --> "1" Currency
  Supplier "1" --> "1" Address
}

note right of PO
  Aggregate Root
  Controls creation of PurchaseOrderItem
  Enforces single currency for all items
end note

note right of POItem
  Calculates its own subtotal
end note

note right of ProductId
  Value Object (UUIDv7)
  Uses Guid for unique product identification
end note

note right of SupplierId
  Value Object
  Identifies Supplier in SupplyChain context
end note

note right of Currency
  Value Object (ISO 4217)
  3-letter alphabetic currency code
end note

note right of Money
  Value Object
  Enforces currency invariants and operator overloads
end note

note right of Address
  Value Object
  Supports international addresses
end note

@enduml
